# TransparrentMirror

./: .gitignore  CMakeLists.txt  board_detector.cpp  board_detector.h  ccn.cpp  ccn.h  ccn_corresp_group.cpp  ccn_corresp_group.h  ccn_estimation.cpp  ccn_estimation.h  cvs.cpp  cvs.h  cvs_corresp_group.cpp  cvs_corresp_group.h  cvs_estimation.cpp  cvs_estimation.h  distance_measurer.cu  distance_measurer.h  edge_detector.cpp  edge_detector.h  icf.cpp  icf.h  kinect2_grabber.cpp  kinect2_grabber.h  main.cpp  mesh.cpp  mesh.h  pose.cpp  pose.h
gui/: main_window.cpp  main_window.h  thread_capture.cpp  thread_capture.h  thread_recognition.cpp  thread_recognition.h
